--- a/docs/css/style.css
+++ b/docs/css/style.css
@@ -1,7 +1,7 @@
 /********** Template CSS **********/
 :root {
-    --primary: #2124B1;
-    --secondary: #4777F5;
+    --primary: #6419FF;
+    --secondary: #B297F4;
     --light: #F7FAFF;
     --dark: #1D1D27;
 }
