--- a/docs/css/style.css
+++ b/docs/css/style.css
@@ -416,7 +416,7 @@ h6,
     bottom: 0;
     left: 0;
     border-radius: 10px;
-    background: #FFFFFF;
+    background: #2a293e;
     box-shadow: 0 0 45px rgba(0, 0, 0, .1);
     transition: .5s;
     z-index: -1;
@@ -434,6 +434,12 @@ h6,
 .team-item:hover h5,
 .team-item:hover small {
     color: var(--light);
+}
+
+.team-note {
+    text-align: center;
+    margin-right: 50px;
+    color:#707070
 }
 
 
